Product card item bug fix with compare/favorites and overflow

--- a/src/ui/organims/Products/Products.scss
+++ b/src/ui/organims/Products/Products.scss
@@ -59,7 +59,11 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow: hidden;
+
+    > a {
+      border-radius: rem(16px 16px 0 0);
+      overflow: hidden;
+    }
 
     > div {
       padding: rem(8px 24px);
@@ -117,7 +121,6 @@
   .options-devices {
     display: flex;
     flex-direction: row;
-    position: relative;
   }
 
   button {
@@ -129,21 +132,13 @@
     margin-right: 0;
   }
 
-  .add-to-favorites {
+  .add-to-favorites,
+  .compare-devices {
     transition: all 0.3s ease-in-out;
+    position: relative;
 
     &:hover {
       .options-devices-info {
-        display: flex;
-      }
-    }
-  }
-
-  .compare-devices {
-    transition: all 0.3s ease-in-out;
-
-    &:hover {
-      .compare-info {
         display: flex;
       }
     }
@@ -155,22 +150,20 @@
   position: absolute;
   width: max-content;
   top: 120%;
+  left: 50%;
   transform: translateX(-50%);
   font-size: rem(18px);
   padding: rem(5px 10px);
   font-weight: 900;
   border-radius: rem(16px);
   z-index: 50;
+  color: #fff;
 }
 
 .favorites-info {
-  background-color: #9e9e9e;
-  color: #673ab7;
-  left: 75%;
+  background-color: #673ab7;
 }
 
 .compare-info {
   background-color: #5cba48;
-  color: #fff;
-  left: 25%;
 }
